Seperate apsettings into Dev and Prod

--- a/GMedia/appsettings.Development.json
+++ b/GMedia/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+	"ConnectionStrings": {
+		//"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GMediaDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+		"DefaultConnection": "Server=DESKTOP-UJV4L9P\\SQLEXPRESS;Database=GMediaDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+	}
 }
