--- a/GMedia/appsettings.json
+++ b/GMedia/appsettings.json
@@ -1,13 +1,12 @@
 {
-  "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=GMediaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=DESKTOP-UJV4L9P\\SQLEXPRESS;Database=GMediaDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": ""
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
