Seperate project to MVC model
- Create 3 different projects: UI, Services, Data
- Move all code to appropriate places
- Refactor all references

--- a/GMedia/GMedia.UI.csproj
+++ b/GMedia/GMedia.UI.csproj
@@ -28,4 +28,9 @@
     <None Include="E:\Programming\Projects\GMedia\GMedia\GMedia\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GMedia.Data\GMedia.Data.csproj" />
+    <ProjectReference Include="..\GMedia.Services\GMedia.Services.csproj" />
+  </ItemGroup>
+
 </Project>
